Added in database related files and repositories

--- a/DJValeting/DJValeting.csproj
+++ b/DJValeting/DJValeting.csproj
@@ -14,7 +14,7 @@
 
 
   <ItemGroup>
-    <ProjectReference Include="..\..\DJValeting.Domain\DJValeting.Domain.csproj" />
+    <ProjectReference Include="..\DJValeting.Domain\DJValeting.Domain.csproj" />
   </ItemGroup>
 
 </Project>
