Added in authentiction client code

--- a/DJValeting/appsettings.json
+++ b/DJValeting/appsettings.json
@@ -2,5 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost;Database=DJValeting;Integrated Security=SSPI;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AuthenticationAuthority": "https://authentication.gts.com/",
+  "ClientSite": "http://DJValeting.com"
 }
